unpackaged/main/default/objects/PNL__c/PNL__c.object-meta.xml
<CustomObject>
    <label>PNL</label>
    <nameField>
        <label>PNL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PNLS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>