unpackaged/main/default/objects/PNL__c/fields/Active_Employee__c.field-meta.xml
<CustomField>
    <fullName>Active_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Employee</label>
    <type>Checkbox</type>
</CustomField>