unpackaged/main/default/objects/PNL__c/fields/Annual_Car_allowance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Car_allowance__c</fullName>
    <label>Annual Car allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>