unpackaged/main/default/objects/PNL__c/fields/Avg_Month_Days__c.field-meta.xml
<CustomField>
    <fullName>Avg_Month_Days__c</fullName>
    <label>Avg Month Days</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>