unpackaged/main/default/objects/PNL__c/fields/Business_Laptop__c.field-meta.xml
<CustomField>
    <fullName>Business_Laptop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Laptop</label>
    <type>Checkbox</type>
</CustomField>