unpackaged/main/default/objects/PNL__c/fields/Business_Laptop_Make__c.field-meta.xml
<CustomField>
    <fullName>Business_Laptop_Make__c</fullName>
    <label>Business Laptop Make</label>
    <length>100</length>
    <type>Text</type>
</CustomField>