unpackaged/main/default/objects/PNL__c/fields/Business_Laptop_Service_Tag__c.field-meta.xml
<CustomField>
    <fullName>Business_Laptop_Service_Tag__c</fullName>
    <label>Business Laptop Service Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>