unpackaged/main/default/objects/PNL__c/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Phone</label>
    <type>Checkbox</type>
</CustomField>