unpackaged/main/default/objects/PNL__c/fields/Car_Insurance_Inclusive_of_Business_Use__c.field-meta.xml
<CustomField>
    <fullName>Car_Insurance_Inclusive_of_Business_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car Insurance Inclusive of Business Use</label>
    <type>Checkbox</type>
</CustomField>