unpackaged/main/default/objects/PNL__c/fields/Car_Insurance_Policy_On_File__c.field-meta.xml
<CustomField>
    <fullName>Car_Insurance_Policy_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car Insurance Policy On File</label>
    <type>Checkbox</type>
</CustomField>