unpackaged/main/default/objects/PNL__c/fields/Company_Car__c.field-meta.xml
<CustomField>
    <fullName>Company_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Car</label>
    <type>Checkbox</type>
</CustomField>