unpackaged/main/default/objects/PNL__c/fields/Company_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Company_Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Credit Card</label>
    <type>Checkbox</type>
</CustomField>