unpackaged/main/default/objects/PNL__c/fields/Consultant_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Company_Name__c</fullName>
    <label>Consultant Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>