unpackaged/main/default/objects/PNL__c/fields/Contracted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Hours__c</fullName>
    <label>Contracted Hours Per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>