unpackaged/main/default/objects/PNL__c/fields/Contractual_OTE__c.field-meta.xml
<CustomField>
    <fullName>Contractual_OTE__c</fullName>
    <label>Contractual OTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>