unpackaged/main/default/objects/PNL__c/fields/Contractual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Salary__c</fullName>
    <label>Contractual Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>