unpackaged/main/default/objects/PNL__c/fields/CPD_URL_Resource1__c.field-meta.xml
<CustomField>
    <fullName>CPD_URL_Resource1__c</fullName>
    <label>CPD URL Resource 1</label>
    <type>Url</type>
</CustomField>