unpackaged/main/default/objects/PNL__c/fields/Date_Of_Last_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Review__c</fullName>
    <label>Date Of Last Review</label>
    <type>Date</type>
</CustomField>