unpackaged/main/default/objects/PNL__c/fields/Drivers_Licence_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Licence_Expiry__c</fullName>
    <label>Drivers Licence Expiry</label>
    <type>Date</type>
</CustomField>