unpackaged/main/default/objects/PNL__c/fields/Drivers_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Licence_Number__c</fullName>
    <label>Drivers Licence Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>