unpackaged/main/default/objects/PNL__c/fields/Email_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Email_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Account Created</label>
    <type>Checkbox</type>
</CustomField>