unpackaged/main/default/objects/PNL__c/fields/Emergency_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_2__c</fullName>
    <label>Emergency Contact 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>