unpackaged/main/default/objects/PNL__c/fields/Emergency_Contact_2_Telephone_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_2_Telephone_Number_2__c</fullName>
    <label>Emergency Contact 2 Telephone Number 2</label>
    <type>Phone</type>
</CustomField>