unpackaged/main/default/objects/PNL__c/fields/FLD__c.field-meta.xml
<CustomField>
    <fullName>FLD__c</fullName>
    <label>FLD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>