unpackaged/main/default/objects/PNL__c/fields/Forename__c.field-meta.xml
<CustomField>
    <fullName>Forename__c</fullName>
    <label>Forename</label>
    <length>100</length>
    <type>Text</type>
</CustomField>