unpackaged/main/default/objects/PNL__c/fields/Health_Cover__c.field-meta.xml
<CustomField>
    <fullName>Health_Cover__c</fullName>
    <label>Health Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>