unpackaged/main/default/objects/PNL__c/fields/Holiday_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Entitlement__c</fullName>
    <label>Holiday Entitlement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>