unpackaged/main/default/objects/PNL__c/fields/IMEI_Number__c.field-meta.xml
<CustomField>
    <fullName>IMEI_Number__c</fullName>
    <label>IMEI Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>