unpackaged/main/default/objects/PNL__c/fields/Key_Holder__c.field-meta.xml
<CustomField>
    <fullName>Key_Holder__c</fullName>
    <label>Key Holder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>