unpackaged/main/default/objects/PNL__c/fields/Leaver_Date__c.field-meta.xml
<CustomField>
    <fullName>Leaver_Date__c</fullName>
    <label>Leaver Date</label>
    <type>Date</type>
</CustomField>