unpackaged/main/default/objects/PNL__c/fields/Leaver_No_of_Years_at_Majenta__c.field-meta.xml
<CustomField>
    <fullName>Leaver_No_of_Years_at_Majenta__c</fullName>
    <formula>(Leaver_Date__c - Work_Start_Date__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leaver No of Years at Majenta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>