unpackaged/main/default/objects/PNL__c/fields/Lookup_PY_Foreign_Key__c.field-meta.xml
<CustomField>
    <fullName>Lookup_PY_Foreign_Key__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup PY Foreign Key</label>
    <referenceTo>PNL__c</referenceTo>
    <relationshipLabel>PNLS  Foreign Key</relationshipLabel>
    <relationshipName>PNLS</relationshipName>
    <type>Lookup</type>
</CustomField>