unpackaged/main/default/objects/PNL__c/fields/Monthly_Car_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Car_Allowance__c</fullName>
    <formula>Annual_Car_allowance__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Car Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>