unpackaged/main/default/objects/PNL__c/fields/Monthly_Healthcover__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Healthcover__c</fullName>
    <formula>Health_Cover__c/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Healthcover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>