unpackaged/main/default/objects/PNL__c/fields/Monthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Salary__c</fullName>
    <formula>Contractual_Salary__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>