unpackaged/main/default/objects/PNL__c/fields/NI_Number__c.field-meta.xml
<CustomField>
    <fullName>NI_Number__c</fullName>
    <label>NI Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>