unpackaged/main/default/objects/PNL__c/fields/No_of_Years_at_Majenta__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years_at_Majenta__c</fullName>
    <formula>FLOOR((TODAY() -  Work_Start_Date__c )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Years at Majenta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>