unpackaged/main/default/objects/PNL__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>