unpackaged/main/default/objects/PNL__c/fields/Pension__c.field-meta.xml
<CustomField>
    <fullName>Pension__c</fullName>
    <label>Pension</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>