unpackaged/main/default/objects/PNL__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>If you do no see the selection you require please contact your admin for Help and Assistance</inlineHelpText>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>Consultants - (AH Division Only)</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>JLR iPLM</fullName>
                <label>enerjyhub</label>
            </value>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>