unpackaged/main/default/objects/PNL__c/fields/Salesforce_Login_Created__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Login_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Login Created</label>
    <type>Checkbox</type>
</CustomField>