unpackaged/main/default/objects/PNL__c/fields/Salesforce_Training_Provided__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Training_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Training Provided</label>
    <type>Checkbox</type>
</CustomField>