unpackaged/main/default/objects/PNL__c/fields/Signed_Contract_In_Place__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_In_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Contract In Place</label>
    <type>Checkbox</type>
</CustomField>