unpackaged/main/default/objects/PNL__c/fields/Staff_Handbook_Provided__c.field-meta.xml
<CustomField>
    <fullName>Staff_Handbook_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Handbook Provided</label>
    <type>Checkbox</type>
</CustomField>