unpackaged/main/default/objects/PNL__c/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <inlineHelpText>If you cannot find the Selection you require please email a salesforce request to your administrator for Support</inlineHelpText>
    <label>Sub Division</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk BIM</fullName>
            </value>
            <value>
                <fullName>Autodesk MFG</fullName>
            </value>
            <value>
                <fullName>Autodesk IDV</fullName>
            </value>
            <value>
                <fullName>Data Services Ford</fullName>
            </value>
            <value>
                <fullName>Data Services Nissan</fullName>
            </value>
            <value>
                <fullName>Data Services MX</fullName>
            </value>
            <value>
                <fullName>Data Services AML</fullName>
            </value>
            <value>
                <fullName>Data Services Translation</fullName>
            </value>
            <value>
                <fullName>Data Services JLR</fullName>
            </value>
            <value>
                <fullName>Data Services Rolls Royce</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>