unpackaged/main/default/objects/PNL__c/fields/Work_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Start_Date__c</fullName>
    <label>Work Start Date</label>
    <type>Date</type>
</CustomField>