unpackaged/main/default/objects/PNL__c/listViews/Duplicates.listView-meta.xml
<ListView>
    <fullName>Duplicates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>amlani,bloxham,wilcox,clements,watford,pennington,clarke,ashworth,masters,mccart</value>
    </filters>
    <label>Duplicates</label>
    <sharedTo>
        <group>AccountsTeam</group>
        <role>Accounts</role>
        <role>GroupAdminAccounts</role>
    </sharedTo>
</ListView>