unpackaged/main/default/objects/PNL__c/listViews/Total_Import_Detail.listView-meta.xml
<ListView>
    <fullName>Total_Import_Detail</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Work_Start_Date__c</columns>
    <columns>Monthly_Salary__c</columns>
    <columns>Last_Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Staff</label>
    <sharedTo>
        <role>Accounts</role>
    </sharedTo>
</ListView>